# notepp

./: notes.txt  readme.md
cmake_install/: CMakeLists.txt
cmake_practice/: CMakeLists.txt  install.sh
cpp/: CMakeLists.txt  array.cpp  async  async.cpp  bytes  bytes.cpp  client  client.cpp  clock  clock.cpp  cmd  cmd.cpp  cmd.sh  cpu  cpu.cpp  daemon  daemon.cpp  encode  encode.cpp  enum  enum.cpp  errors  errors.cpp  func  func.cpp  grok3_pool  grok3_pool.cpp  grok3_rf  grok3_rf.cpp  hungarian.py  ifdef  ifdef.cpp  ifelse  ifelse.cpp  lambda  lambda.cpp  map  map.cpp  math  math.cpp  (+30 more)
cpp/class/: CMakeLists.txt  class  class.cpp  class.h  inheritance  inheritance.cpp  main.cpp  virtual  virtual.cpp
cpp/jsonTest/: CMakeLists.txt  Json_io.cpp  Json_io2.cpp
cpp/param/: main.cpp  param.cpp  param.h  test.yaml
cpp/struct/: CMakeLists.txt  struct_init.cpp
cpp/thread_in_class/: CMakeLists.txt  main.cpp  main2.cpp
cpp/thread_in_class/class_with_thread/: class_with_thread.cpp  class_with_thread.h
cpp/thread_in_class/ob/: test.cpp  test.h
cpp/timer/: CMakeLists.txt  main.cpp
exp/01-cmake-level1/: CMakeLists.txt  hello.ii  pointer
exp/02-cmake-level2/: CMakeLists.txt  build.sh  hello.cpp  hello.hpp  main.cpp
exp/03-cmake-level3/: CMakeLists.txt  build.sh
exp/03-cmake-level3/main/: main.cpp
exp/04-cmake-level4/: CMakeLists.txt  build.sh  rk1126.cmake
exp/04-cmake-level4/src/: main.cpp
exp/06-eigen/: .gitignore  CMakeLists.txt  build.sh  main.cpp  readme.md
exp/06-eigen/lib/: CMakeLists.txt  test.cpp  test.h
exp/06-eigen/lib/assign/: munkres.cpp  munkres.h  unorderd.cpp
exp/06-eigen/lib/filter/filtfilt/: filtfilt.cpp  filtfilt.h  filtfilt2.cpp
exp/06-eigen/lib/filter/kalman/: FusionEKF.cpp  FusionEKF.h  kalman.cpp  kalman.h  tools.cpp  tools.h
exp/06-eigen/lib/filter/lowpass/: lfilter.cpp  lfilter.h
exp/07-opencv/: CMakeLists.txt  build.sh  main.cpp
exp/07-opencv-Hi3519DV500/: CMakeLists.txt  build.sh  main.cpp
exp/07-opencv-Hi3519DV500/lib/: CMakeLists.txt  imgReader.cpp
exp/07-opencv-Hi3519DV500/lib/opencv/lib/cmake/opencv4/: OpenCVModules.cmake
exp/07-opencv-HiS/lib/: imgReader.h
exp/07-opencv-HiS/toolchains/: Hi3519DV500.cmake
exp/07-opencv-sophon/: CMakeLists.txt  build.sh  install-sophon-tpu.sh  main.cpp  readme.md  sophon.cmake
exp/07-opencv-sophon/data/: test2.yuv
exp/07-opencv-sophon/python/: flow.py
exp/07-opencv/data/: test1.yuv
exp/07-opencv/lib/: CMakeLists.txt  imgReader.cpp  imgReader.h
exp/08-android/: CMakeLists.txt  main.cpp
exp/08-android/lib/: CMakeLists.txt  CreateUserBuffer.cpp  CreateUserBuffer.hpp  LoadInputTensor.cpp  LoadInputTensor.hpp  SaveOutputTensor.cpp
exp/08-daemon/: CMakeLists.txt  build.sh  hello.cpp  main.cpp
exp/08-daemon/daemon/resource/systemd/: exeName.service
exp/08-daemon/daemon/source/: daemon.cpp
exp/09-server/: CMakeLists.txt  build.sh  readme.md
exp/09-server-cpp17/: build.sh  main.cpp
exp/09-server-cpp17/lib/: CMakeLists-self.txt
exp/09-server/lib/: CMakeLists-self.txt  CMakeLists.txt
exp/09-server/lib/uSockets/: CMakeLists-ms.txt  CMakeLists.txt
exp/09-socket/: CMakeLists.txt  main.cpp
exp/09-socket/lib/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
exp/09-uwebsockets/: CMakeLists.txt  build.sh
exp/10-https/: CMakeLists.txt  main.cpp  readme.md
exp/10-https/lib/: CMakeLists.txt  (+4 more)
exp/10-timer/: main.cpp
exp/100-webrtc/: readme.md
exp/11-mqtt/: CMakeLists.txt  example.cpp  main.cpp  readme.md
exp/11-mqtt/examples/: async1.cpp  async2.cpp  example.cpp
exp/11-mqtt/lib/: CMakeLists.txt  imgReader.h  mqtt.cpp  mqtt.h
exp/11-mqtt/lib/paho/lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.13  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.3.13
exp/11-mqtt/lib/paho/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-noconfig.cmake  eclipse-paho-mqtt-cConfig.cmake  eclipse-paho-mqtt-cConfigVersion.cmake
exp/12-cuehttp/: CMakeLists.txt  readme.md
exp/12-cuehttp/examples/https/: CMakeLists.txt
exp/12-cuehttp/lib/: CMakeLists.txt
exp/13-boost/: CMakeLists.txt  build.sh  main.cpp
exp/13-boost/lib/: CMakeLists.txt  Controller.cpp  Controller.h  HttpServer.cpp  HttpServer.h  Model.cpp  Model.h  View.cpp  View.h  http.cpp  http.h
exp/14-zlmHttp/: CMakeLists.txt  build.sh  main.cpp
exp/14-zlmHttp/lib/: CMakeLists.txt
exp/14-zlmHttp/lib/ZLMediaKit/: CMakeLists.txt
exp/15-threadpool/: CMakeLists.txt  exp.lnk  main.cpp
exp/16-ssl/: CMakeLists.txt  build.sh  main.cpp
exp1/: hello.cpp  hello.s
exp1-cmake-level1/: hello
exp10-timer/: timer.cpp
exp2/: main.cpp
exp3/: CMakeLists.txt
exp3-cmake-level3/lib/: CMakeLists.txt
exp3-cmake-level3/main/: CMakeLists.txt
exp3/main/: main.cpp
exp4/: CMakeLists.txt
exp4-cmake-level4/lib/: CMakeLists.txt
exp4/src/: CMakeLists.txt
exp5-xcode/: note.txt
exp6-eigen/: build.sh  main.cpp
exp7-opencv/: CMakeLists.txt  build.sh  main.cpp
exp8-json/: build.sh  main.cpp
exp9-param/: main.cpp
tools/: fft.cpp  files  files.cpp  restart.sh  test.txt  veee.md  wakeup.sh
tools/assign/: CMakeLists.txt  main.cpp
tools/assign/lib/: CMakeLists.txt  matrix.cpp  matrix.h  munkres.cpp  munkres.h
tools/cv/: CMakeLists.txt  main.cpp  readme.md
tools/daemon/: CMakeLists.txt  build.sh  main.cpp
tools/dify/: docker-compose.yaml  note.txt
tools/file/: CMakeLists.txt  files.cpp  files.h  main.cpp
tools/file/output/: files
tools/frp/: deploy.sh  frpc.service.app  frps.service.app
tools/json/: CMakeLists.txt  build.sh  main.cpp  main2.cpp
tools/mihomo/: etc-mihomo-config.yaml  mihomo.service.yaml
tools/n8n/: deploy-macos.sh  deploy.sh
tools/param/: CMakeLists.txt  param.cpp  param.h
tools/polygon/: CMakeLists.txt  build.sh  main.cpp  polygon.cpp  polygon.h
tools/socket/: .gitignore  CMakeLists.txt  build.sh  readme.md
tools/socket/examples/: tcp-client.cpp  tcp-server.cpp  udp-client.cpp  udp-server.cpp
tools/socket/lib/: buzzer.h  led.h  strcvt.hpp  tcpserver.hpp  tcpsocket.hpp  udpsocket.hpp
tools/timer/: CMakeLists.txt  build.sh  main.cpp  timer.cpp  timer.h
(+20 files in other folders)
